# cows-rs

./: Cargo.toml  README.md  split.js
src/: cows.rs  lib.rs
